| Summary: | ASTERISK-30245: db: ListItems is incorrect | ||
| Reporter: | N A (InterLinked) | Labels: | |
| Date Opened: | 2022-09-24 07:04:59 | Date Closed: | 2022-09-26 14:11:33 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Core/AstDB |
| Versions: | 18.14.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | As reported in the comments on https://issues.asterisk.org/jira/browse/ASTERISK-30136, ListItems is incorrect. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2022-09-24 07:05:03.809-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Joshua C. Colp (jcolp) 2022-09-26 04:46:41.641-0500 The events this produces and the format of them has also not been documented. By: Friendly Automation (friendly-automation) 2022-09-26 14:11:34.237-0500 Change 19365 merged by Friendly Automation: db: Fix incorrect DB tree count for AMI. [https://gerrit.asterisk.org/c/asterisk/+/19365|https://gerrit.asterisk.org/c/asterisk/+/19365] By: Friendly Automation (friendly-automation) 2022-09-26 14:12:39.305-0500 Change 19363 merged by Friendly Automation: db: Fix incorrect DB tree count for AMI. [https://gerrit.asterisk.org/c/asterisk/+/19363|https://gerrit.asterisk.org/c/asterisk/+/19363] By: Friendly Automation (friendly-automation) 2022-09-26 17:19:11.733-0500 Change 19362 merged by Friendly Automation: db: Fix incorrect DB tree count for AMI. [https://gerrit.asterisk.org/c/asterisk/+/19362|https://gerrit.asterisk.org/c/asterisk/+/19362] By: Friendly Automation (friendly-automation) 2022-09-26 17:19:24.176-0500 Change 19309 merged by Friendly Automation: db: Fix incorrect DB tree count for AMI. [https://gerrit.asterisk.org/c/asterisk/+/19309|https://gerrit.asterisk.org/c/asterisk/+/19309] By: Friendly Automation (friendly-automation) 2022-09-26 17:19:40.582-0500 Change 19364 merged by Friendly Automation: db: Fix incorrect DB tree count for AMI. [https://gerrit.asterisk.org/c/asterisk/+/19364|https://gerrit.asterisk.org/c/asterisk/+/19364] | ||